DevOCL/src/objects/CLQ_Tools_Rules__c.object
<CustomObject>
    <description>Junction object that manages the N:N relationship between the Visit Tool and Rules objects</description>
    <fields>
        <fullName>CLQ_Domain_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain Rule</label>
        <referenceTo>CLQ_Domain_Rule__c</referenceTo>
        <relationshipLabel>Tools Rules</relationshipLabel>
        <relationshipName>Tools_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Tools Rules object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Inspection_Tools__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection Tools</label>
        <referenceTo>CLQ_Inspection_Tools__c</referenceTo>
        <relationshipLabel>Tools Rules</relationshipLabel>
        <relationshipName>Tools_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Rules__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rules</label>
        <referenceTo>CLQ_Rule__c</referenceTo>
        <relationshipLabel>Tools Rules</relationshipLabel>
        <relationshipName>Tools_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Visit_Tool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit Tool</label>
        <referenceTo>CLQ_Visit_Tool__c</referenceTo>
        <relationshipLabel>Tools Rules</relationshipLabel>
        <relationshipName>Tools_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Tools Rules</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Tools Rules No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tools Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>